# siconfi-collector

./: .gitignore  README.md  pyproject.toml
src/siconfi/: __init__.py  __main__.py  api.py  cli.py  collector.py  entities.py  prefeitura_forecast.py  transform.py
tests/: test_entities.py  test_prefeitura_forecast.py  test_transform_prefeitura.py
tests/fixtures/: anexo03_minimo.csv
